package modelo.catalogo;

public enum EstadoCita {
    PROGRAMADA,
    CONFIRMADA,
    ATENDIDA,
    CANCELADA,
    NO_ASISTIO,
    REPROGRAMADA
}
