package modelo.catalogo;

public enum Prioridad {
    BAJA,
    NORMAL,
    ALTA,
    URGENTE
}
